--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
         <title>Thomas J. Watson Sr - Fan Page</title>
     </head>
     <body>
+
         <h1>Thomas J. Watson</h1>
+
+        <section id="home">
+            <header><b>Conversions</b></header>
+        <nav>
+            <a href="#temperature"><button>Temperature</button></a>
+            <a href="#weight"><button>Weight</button></a>
+            <a href="#distance"><button>Distance</button></a>
+        </nav>
+        </section>
+
+        <div id="all-conversion-sections">
+            <section id="temperature">
+                <div id="tmp">
+                    <figure>
+                        <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-CD0101EN-SkillsNetwork/labs/Theia%20Labs/02%20-%20HTML5%20Elements/images/thermo.png" width="200px">
+                        <figcaption>Celsius to Farenheit conversion</figcaption>
+                    </figure>
+                </div>
+            </section>
+        </div>
     </body>
     
         
